# learn-rust

./: .gitignore
example/src/: main.rs
http-server/: Cargo.toml  README.md
http-server/public/: hello.html  index.html  style.css
http-server/src/: main.rs  server.rs  website_handler.rs
http-server/src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
redis-server/: Cargo.toml
redis-server/src/: main.rs
search_engine/: Cargo.toml
search_engine/src/: main.rs
search_engine/src/indexer/: category.rs  index_file.rs  indexer.rs  indexer_tags.rs  mod.rs  parser.rs  posting_offset.rs
tao_db/: Cargo.toml  README.md  build.rs
tao_db/data/: tao_database.db
tao_db/frontend/: graph.json  index.html
tao_db/frontend/data/: tao_database.db
tao_db/src/: app_state.rs  cache.rs  config.rs  database.rs  db.rs  dto.rs  lib.rs  main.rs  schema.rs  server.rs  service.rs  tao.rs  thrift_utils.rs
tao_db/src/models/: common.rs  group.rs  mod.rs  post.rs  user.rs
tao_db/src/routes/: graph_routes.rs  health_routes.rs  mod.rs  post_routes.rs  social_routes.rs  user_routes.rs
tao_db/src/services/: graph_service.rs  mod.rs  post_service.rs  social_service.rs  user_service.rs
tao_db/src/tools/: export_graph.rs
tao_db/tests/: basic.rs
tao_db/thrift/: associations.thrift  common.thrift  group.thrift  models.thrift  post.thrift  tao.thrift  user.thrift
