[package]
name = "tao_db"
version = "0.1.0"
edition = "2024"

[dependencies]
lru = "0.14.0"
rusqlite = "0.36.0"
thrift = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "tao_db"
path = "src/main.rs"

[[bin]]
name = "export_graph"
path = "src/tools/export_graph.rs"
